# copilot_cost_tracker

./: .gitignore  README.md  dashboard.py  pyproject.toml
examples/: copilot_usage_events.csv
scripts/: extract_copilot_usage.py
