[project]
name = "copilot-cost-tracker"
version = "0.1.0"
description = "Extract and visualize GitHub Copilot usage and cost over time"
readme = "RESUME_NOTES_2026-06-11.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2.0",
  "plotly>=5.22.0",
  "streamlit>=1.36.0",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.uv]
package = false
